--- a/PowerPointWebAddIn1/PowerPointWebAddIn1Web/Home.html
+++ b/PowerPointWebAddIn1/PowerPointWebAddIn1Web/Home.html
@@ -28,18 +28,8 @@
     <div id="content-main">
         <div class="padding">
             <br />
-            <p class="ms-font-xxl ms-fontColor-neutralSecondary ms-fontWeight-semilight">Sample</p>
+            <p class="ms-font-xxl ms-fontColor-neutralSecondary ms-fontWeight-semilight">Text Commands to: (248) 639-7928</p>
             <br />
-            <div class="ms-font-xl ms-fontColor-neutralTertiary">Getting Started</div>
-            <p class="ms-font-m-plus ms-fontColor-neutralTertiary">This sample reads the value of the text you have selected in the slide. </p>
-             <br /><br />
-            <button class="ms-Button ms-Button--primary" id="goToFirstSlide">
-                <span class="ms-Button-icon"><i class="ms-Icon ms-Icon--plus"></i></span>
-                <span class="ms-Button-label">Get data from selection</span>
-                <span class="ms-Button-description">Gets the selected data and displays it.</span>
-            </button>
-            <br /><br /><br />
-            <div class="ms-font-m"><a target="_blank" class="ms-Link ms-Link--hero" href="https://go.microsoft.com/fwlink/?LinkId=276812">Find more samples online...</a></div>
         </div>
     </div>
     <div class="footer">
